--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
         <div id="react-root"></div>
         <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
         <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+        <script>src="index.js"</script>
     </body>
 </html>
